android/gen/com/android/tools/idea/lang/roomSql/parser/RoomSqlParser.java
/*
 * Copyright (C) 2017 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// ATTENTION: This file has been automatically generated from roomSql.bnf. Do not edit it manually.

package com.android.tools.idea.lang.roomSql.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.android.tools.idea.lang.roomSql.psi.RoomPsiTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class RoomSqlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ALTER_TABLE_STMT) {
      r = alter_table_stmt(b, 0);
    }
    else if (t == ANALYZE_STMT) {
      r = analyze_stmt(b, 0);
    }
    else if (t == ATTACH_STMT) {
      r = attach_stmt(b, 0);
    }
    else if (t == BEGIN_STMT) {
      r = begin_stmt(b, 0);
    }
    else if (t == BIND_PARAMETER) {
      r = bind_parameter(b, 0);
    }
    else if (t == COLLATION_NAME) {
      r = collation_name(b, 0);
    }
    else if (t == COLUMN_ALIAS) {
      r = column_alias(b, 0);
    }
    else if (t == COLUMN_CONSTRAINT) {
      r = column_constraint(b, 0);
    }
    else if (t == COLUMN_DEF) {
      r = column_def(b, 0);
    }
    else if (t == COLUMN_NAME) {
      r = column_name(b, 0);
    }
    else if (t == COMMIT_STMT) {
      r = commit_stmt(b, 0);
    }
    else if (t == COMMON_TABLE_EXPRESSION) {
      r = common_table_expression(b, 0);
    }
    else if (t == COMPOUND_OPERATOR) {
      r = compound_operator(b, 0);
    }
    else if (t == CONFLICT_CLAUSE) {
      r = conflict_clause(b, 0);
    }
    else if (t == CREATE_INDEX_STMT) {
      r = create_index_stmt(b, 0);
    }
    else if (t == CREATE_TABLE_STMT) {
      r = create_table_stmt(b, 0);
    }
    else if (t == CREATE_TRIGGER_STMT) {
      r = create_trigger_stmt(b, 0);
    }
    else if (t == CREATE_VIEW_STMT) {
      r = create_view_stmt(b, 0);
    }
    else if (t == CREATE_VIRTUAL_TABLE_STMT) {
      r = create_virtual_table_stmt(b, 0);
    }
    else if (t == CTE_TABLE_NAME) {
      r = cte_table_name(b, 0);
    }
    else if (t == DATABASE_NAME) {
      r = database_name(b, 0);
    }
    else if (t == DELETE_STMT) {
      r = delete_stmt(b, 0);
    }
    else if (t == DELETE_STMT_LIMITED) {
      r = delete_stmt_limited(b, 0);
    }
    else if (t == DETACH_STMT) {
      r = detach_stmt(b, 0);
    }
    else if (t == DROP_INDEX_STMT) {
      r = drop_index_stmt(b, 0);
    }
    else if (t == DROP_TABLE_STMT) {
      r = drop_table_stmt(b, 0);
    }
    else if (t == DROP_TRIGGER_STMT) {
      r = drop_trigger_stmt(b, 0);
    }
    else if (t == DROP_VIEW_STMT) {
      r = drop_view_stmt(b, 0);
    }
    else if (t == ERROR_MESSAGE) {
      r = error_message(b, 0);
    }
    else if (t == EXPR) {
      r = expr(b, 0, -1);
    }
    else if (t == FOREIGN_KEY_CLAUSE) {
      r = foreign_key_clause(b, 0);
    }
    else if (t == FOREIGN_TABLE) {
      r = foreign_table(b, 0);
    }
    else if (t == FUNCTION_NAME) {
      r = function_name(b, 0);
    }
    else if (t == INDEX_NAME) {
      r = index_name(b, 0);
    }
    else if (t == INDEXED_COLUMN) {
      r = indexed_column(b, 0);
    }
    else if (t == INSERT_STMT) {
      r = insert_stmt(b, 0);
    }
    else if (t == JOIN_CLAUSE) {
      r = join_clause(b, 0);
    }
    else if (t == JOIN_CONSTRAINT) {
      r = join_constraint(b, 0);
    }
    else if (t == JOIN_OPERATOR) {
      r = join_operator(b, 0);
    }
    else if (t == LITERAL_VALUE) {
      r = literal_value(b, 0);
    }
    else if (t == MODULE_ARGUMENT) {
      r = module_argument(b, 0);
    }
    else if (t == MODULE_NAME) {
      r = module_name(b, 0);
    }
    else if (t == ORDERING_TERM) {
      r = ordering_term(b, 0);
    }
    else if (t == PRAGMA_NAME) {
      r = pragma_name(b, 0);
    }
    else if (t == PRAGMA_STMT) {
      r = pragma_stmt(b, 0);
    }
    else if (t == PRAGMA_VALUE) {
      r = pragma_value(b, 0);
    }
    else if (t == QUALIFIED_TABLE_NAME) {
      r = qualified_table_name(b, 0);
    }
    else if (t == REINDEX_STMT) {
      r = reindex_stmt(b, 0);
    }
    else if (t == RELEASE_STMT) {
      r = release_stmt(b, 0);
    }
    else if (t == RESULT_COLUMN) {
      r = result_column(b, 0);
    }
    else if (t == ROLLBACK_STMT) {
      r = rollback_stmt(b, 0);
    }
    else if (t == SAVEPOINT_NAME) {
      r = savepoint_name(b, 0);
    }
    else if (t == SAVEPOINT_STMT) {
      r = savepoint_stmt(b, 0);
    }
    else if (t == SELECT_STMT) {
      r = select_stmt(b, 0);
    }
    else if (t == SIGNED_NUMBER) {
      r = signed_number(b, 0);
    }
    else if (t == SQL_STMT) {
      r = sql_stmt(b, 0);
    }
    else if (t == TABLE_ALIAS) {
      r = table_alias(b, 0);
    }
    else if (t == TABLE_CONSTRAINT) {
      r = table_constraint(b, 0);
    }
    else if (t == TABLE_NAME) {
      r = table_name(b, 0);
    }
    else if (t == TABLE_OR_INDEX_NAME) {
      r = table_or_index_name(b, 0);
    }
    else if (t == TABLE_OR_SUBQUERY) {
      r = table_or_subquery(b, 0);
    }
    else if (t == TRIGGER_NAME) {
      r = trigger_name(b, 0);
    }
    else if (t == TYPE_NAME) {
      r = type_name(b, 0);
    }
    else if (t == UPDATE_STMT) {
      r = update_stmt(b, 0);
    }
    else if (t == UPDATE_STMT_LIMITED) {
      r = update_stmt_limited(b, 0);
    }
    else if (t == VACUUM_STMT) {
      r = vacuum_stmt(b, 0);
    }
    else if (t == VIEW_NAME) {
      r = view_name(b, 0);
    }
    else if (t == WITH_CLAUSE) {
      r = with_clause(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return sql_stmt_list(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ADD_EXPR, AND_EXPR, BETWEEN_EXPR, BIT_EXPR,
      CASE_EXPR, CAST_EXPR, COLLATE_EXPR, COLUMN_REF_EXPR,
      COMPARISON_EXPR, CONCAT_EXPR, EQUIVALENCE_EXPR, EXISTS_EXPR,
      EXPR, FUNCTION_CALL_EXPR, IN_EXPR, ISNULL_EXPR,
      LIKE_EXPR, LITERAL_EXPR, MUL_EXPR, OR_EXPR,
      PAREN_EXPR, RAISE_FUNCTION_EXPR, UNARY_EXPR),
  };

  /* ********************************************************** */
  // ALTER TABLE ( database_name '.' )? table_name ( RENAME TO table_name | ADD ( COLUMN )? column_def )
  public static boolean alter_table_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_table_stmt")) return false;
    if (!nextTokenIs(b, ALTER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ALTER, TABLE);
    r = r && alter_table_stmt_2(b, l + 1);
    r = r && table_name(b, l + 1);
    r = r && alter_table_stmt_4(b, l + 1);
    exit_section_(b, m, ALTER_TABLE_STMT, r);
    return r;
  }

  // ( database_name '.' )?
  private static boolean alter_table_stmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_table_stmt_2")) return false;
    alter_table_stmt_2_0(b, l + 1);
    return true;
  }

  // database_name '.'
  private static boolean alter_table_stmt_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_table_stmt_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = database_name(b, l + 1);
    r = r && consumeToken(b, DOT);
    exit_section_(b, m, null, r);
    return r;
  }

  // RENAME TO table_name | ADD ( COLUMN )? column_def
  private static boolean alter_table_stmt_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_table_stmt_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = alter_table_stmt_4_0(b, l + 1);
    if (!r) r = alter_table_stmt_4_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // RENAME TO table_name
  private static boolean alter_table_stmt_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_table_stmt_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, RENAME, TO);
    r = r && table_name(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ADD ( COLUMN )? column_def
  private static boolean alter_table_stmt_4_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_table_stmt_4_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ADD);
    r = r && alter_table_stmt_4_1_1(b, l + 1);
    r = r && column_def(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( COLUMN )?
  private static boolean alter_table_stmt_4_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alter_table_stmt_4_1_1")) return false;
    consumeToken(b, COLUMN);
    return true;
  }

  /* ********************************************************** */
  // ANALYZE ( database_name | table_or_index_name | database_name '.' table_or_index_name )?
  public static boolean analyze_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "analyze_stmt")) return false;
    if (!nextTokenIs(b, ANALYZE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ANALYZE);
    r = r && analyze_stmt_1(b, l + 1);
    exit_section_(b, m, ANALYZE_STMT, r);
    return r;
  }

  // ( database_name | table_or_index_name | database_name '.' table_or_index_name )?
  private static boolean analyze_stmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "analyze_stmt_1")) return false;
    analyze_stmt_1_0(b, l + 1);
    return true;
  }

  // database_name | table_or_index_name | database_name '.' table_or_index_name
  private static boolean analyze_stmt_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "analyze_stmt_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = database_name(b, l + 1);
    if (!r) r = table_or_index_name(b, l + 1);
    if (!r) r = analyze_stmt_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // database_name '.' table_or_index_name
  private static boolean analyze_stmt_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "analyze_stmt_1_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = database_name(b, l + 1);
    r = r && consumeToken(b, DOT);
    r = r && table_or_index_name(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ATTACH ( DATABASE )? expr AS database_name
  public static boolean attach_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attach_stmt")) return false;
    if (!nextTokenIs(b, ATTACH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ATTACH);
    r = r && attach_stmt_1(b, l + 1);
    r = r && expr(b, l + 1, -1);
    r = r && consumeToken(b, AS);
    r = r && database_name(b, l + 1);
    exit_section_(b, m, ATTACH_STMT, r);
    return r;
  }

  // ( DATABASE )?
  private static boolean attach_stmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attach_stmt_1")) return false;
    consumeToken(b, DATABASE);
    return true;
  }

  /* ********************************************************** */
  // BEGIN ( DEFERRED | IMMEDIATE | EXCLUSIVE )? ( TRANSACTION )?
  public static boolean begin_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "begin_stmt")) return false;
    if (!nextTokenIs(b, BEGIN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BEGIN);
    r = r && begin_stmt_1(b, l + 1);
    r = r && begin_stmt_2(b, l + 1);
    exit_section_(b, m, BEGIN_STMT, r);
    return r;
  }

  // ( DEFERRED | IMMEDIATE | EXCLUSIVE )?
  private static boolean begin_stmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "begin_stmt_1")) return false;
    begin_stmt_1_0(b, l + 1);
    return true;
  }

  // DEFERRED | IMMEDIATE | EXCLUSIVE
  private static boolean begin_stmt_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "begin_stmt_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DEFERRED);
    if (!r) r = consumeToken(b, IMMEDIATE);
    if (!r) r = consumeToken(b, EXCLUSIVE);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( TRANSACTION )?
  private static boolean begin_stmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "begin_stmt_2")) return false;
    consumeToken(b, TRANSACTION);
    return true;
  }

  /* ********************************************************** */
  // PARAMETER_NAME
  public static boolean bind_parameter(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bind_parameter")) return false;
    if (!nextTokenIs(b, PARAMETER_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PARAMETER_NAME);
    exit_section_(b, m, BIND_PARAMETER, r);
    return r;
  }

  /* ********************************************************** */
  // entity_name
  public static boolean collation_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collation_name")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLLATION_NAME, "<collation name>");
    r = entity_name(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // entity_name
  public static boolean column_alias(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "column_alias")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLUMN_ALIAS, "<column alias>");
    r = entity_name(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
